<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivMujer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/hombre"
        app:civ_border_color="@color/text"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvpTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_titulo"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivMujer"
        app:layout_constraintStart_toStartOf="@+id/ivMujer"
        app:layout_constraintTop_toBottomOf="@+id/ivMujer" />

    <TextView
        android:id="@+id/tvpSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/slogan"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpTitulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtpusuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpSlogan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtpusuario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textColorHint="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtppassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpusuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtppassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textColorHint="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnpEntrar"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/entrar"
        android:textColor="@color/text"
        app:backgroundTint="@color/fondoclaro"
        app:layout_constraintEnd_toEndOf="@+id/txtppassword"
        app:layout_constraintStart_toStartOf="@+id/txtppassword"
        app:layout_constraintTop_toBottomOf="@+id/txtppassword"
        app:strokeColor="@color/fondoclaro"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnpRegistrarme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:insetBottom="0dp"
        android:text="@string/registro"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpEntrar"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>